Fix scrollbar style define

--- a/classes/scrollbar.hidden.scss
+++ b/classes/scrollbar.hidden.scss
@@ -5,7 +5,7 @@
 
 
 @mixin scrollbar-hidden {
-  :scrollbar {
+  ::-webkit-scrollbar {
     @include size(0, 0);
     display: none;
   }
